<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="40dp"
    android:paddingEnd="40dp"
    android:paddingBottom="100dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ui.main.PageFragmentTabTwo">

    <TextView
        android:id="@+id/tv_label_help2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:gravity="center"
        android:text="@string/tv_label_help_text_two"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_main_two"
            android:layout_marginTop="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:gravity="center"
            android:digits="@string/acceptable_digits"
            android:textColorHint="@color/cardview_shadow_start_color"
            android:hint="@string/et_main_hint"
            />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>